se cambio el tamaño de la fuente

--- a/views/public/index.html
+++ b/views/public/index.html
@@ -19,10 +19,10 @@
                     <!-- desaparece en pantallas pequeñas -->
                     <ul class="list-inline mb-0 d-none d-lg-inline-block p-1">
                         <li class="list-inline-item opacity-75 mr-2">
-                            <a class="text-light text-small py-1 pl-0 pr-2" href="">+503 2345 4657 &nbsp; | &nbsp;</a>
+                            <a class="text-light text-small pl-0 pr-2" href="">+503 2345 4657 &nbsp; | &nbsp;</a>
                         </li>
                         <li class="list-inline-item opacity-75 mr-2">
-                            <a class="text-light font-size-sm py-1 pl-0 pr-2" href=""><img
+                            <a class="text-light font-size-sm pl-0 pr-2" href=""><img
                                     src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
                                 OnlineStore@aparrecchio.com &nbsp; | &nbsp; </a>
                         </li>
@@ -31,22 +31,22 @@
                         <div class="d-flex">
                             <ul class="list-inline mb-0 d-none d-lg-inline-block p-1">
                                 <li class="list-inline-item opacity-75 mr-2">
-                                    <a class="text-light text-small py-1 pl-0 pr-2" href="">Nosotros &nbsp; |
+                                    <a class="text-light text-small pl-0 pr-2" href="">Nosotros &nbsp; |
                                         &nbsp;</a>
                                 </li>
                                 <li class="list-inline-item opacity-75 mr-2">
-                                    <a class="text-light text-small py-1 pl-0 pr-2" href="">Centro de ayuda &nbsp; |
+                                    <a class="text-light text-small pl-0 pr-2" href="">Centro de ayuda &nbsp; |
                                         &nbsp;</a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="d-flex flex-nowrap">
+                        <div class="d-flex flex-nowrap align-self-center">
                             <a href=""><img
-                                    src="https://img.icons8.com/material-rounded/29/FFFFFF/facebook.png" />&nbsp;</a>
+                                    src="https://img.icons8.com/material-rounded/18/FFFFFF/facebook.png" />&nbsp;</a>
                             <a href=""><img
-                                    src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" />&nbsp;</a>
-                            <a href=""><img src="https://img.icons8.com/ios/23/FFFFFF/whatsapp--v1.png" />&nbsp;</a>
-                            <a href=""><img src="https://img.icons8.com/ios-filled/23/FFFFFF/twitter.png" />&nbsp;</a>
+                                    src="https://img.icons8.com/windows/20/FFFFFF/instagram-new.png" />&nbsp;</a>
+                            <a href=""><img src="https://img.icons8.com/ios/16/FFFFFF/whatsapp--v1.png" />&nbsp;</a>
+                            <a href=""><img src="https://img.icons8.com/ios-filled/16/FFFFFF/twitter.png" />&nbsp;</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row">
+                    <div class="row py-3">
                         <div class="col">
                             <img src="../../resources/images/tazas.jpg" alt="" class="img-fluid producto">
                             <p class="fs-1 text-light text-center">Tazas</p>
