--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -18,7 +18,7 @@
                 </span>
 
                 <div class="text logo-text">
-                    <span class="name">Apparecchio</span>
+                    <span class="name">SubliSivarte</span>
                 </div>
             </div>
 
@@ -44,7 +44,7 @@
                     <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
-                            <span class="text nav-text">Productos</span>
+                            <span class="text nav-text">Pedidos</span>
                         </a>
                     </li>
 
