--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -98,7 +98,7 @@
     </nav>
 
     <section class="home">
-        <div class="text">Apparecchio</div>
+        <div class="text">SubliSivarte</div>
     </section>
 
     <script>
