--- a/resources/css/dashbard.css
+++ b/resources/css/dashbard.css
@@ -9,7 +9,7 @@
 
 :root{
     /* ===== Colors ===== */
-    --body-color: #825b5b;
+    --body-color: #475F7F;
     --sidebar-color: #fff8eb;
     --primary-color: #695CFE;
     --primary-color-light: #F6F5FF;
