--- a/resources/css/dashbard.css
+++ b/resources/css/dashbard.css
@@ -10,7 +10,7 @@
 :root{
     /* ===== Colors ===== */
     --body-color: #475F7F;
-    --sidebar-color: #ecebff;
+    --sidebar-color: #6384aa;
     --primary-color: #695CFE;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
