--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -30,7 +30,7 @@
 
                 <li class="search-box">
                     <i class='bx bx-search icon'></i>
-                    <input type="text" placeholder="Search...">
+                    <input type="text" placeholder="Buscar...">
                 </li>
 
                 <ul class="menu-links">
