--- a/resources/css/dashbard.css
+++ b/resources/css/dashbard.css
@@ -9,12 +9,12 @@
 
 :root{
     /* ===== Colors ===== */
-    --body-color: #475F7F;
+    --body-color: #f9fafc;
     --sidebar-color: #6384aa;
     --primary-color: #695CFE;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
-    --text-color: #E9E1CC;
+    --text-color: #0e1019;
 
     /* ====== Transition ====== */
     --tran-03: all 0.2s ease;
