--- a/resources/css/dashbard.css
+++ b/resources/css/dashbard.css
@@ -53,7 +53,8 @@ body.dark{
     padding: 10px 14px;
     background: var(--sidebar-color);
     transition: var(--tran-05);
-    z-index: 100;  
+    z-index: 100; 
+    text-align: center; 
 }
 .sidebar.close{
     width: 88px;
