--- a/resources/css/dashbard.css
+++ b/resources/css/dashbard.css
@@ -11,7 +11,7 @@
     /* ===== Colors ===== */
     --body-color: #f9fafc;
     --sidebar-color: #6384aa;
-    --primary-color: #695CFE;
+    --primary-color: #b7c2ce;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #0e1019;
@@ -307,4 +307,9 @@ body.dark .switch::before{
 }
 body.dark .home .text{
     color: var(--text-color);
+}
+
+.chart-container{
+    height: 40vh;
+    width: 80vh;
 }
