--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="../../resources/css/dashbard.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -102,15 +104,18 @@
     </nav>
 
     <section class="home">
-        <div class="row">
-            <div class="text">SubliSivarte
+        <div class="row d-flex justify-content-center">
+            <div class="col-4">
                 <div class="chart-container">
                     <canvas id="myChart"></canvas>
                 </div>
-
+            </div>
+            <div class="col-4">
+                <div class="chart-container2">
+                    <canvas id="mychart"></canvas>
+                </div>
             </div>
         </div>
-
     </section>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -118,7 +123,30 @@
         const ctx = document.getElementById('myChart');
 
         new Chart(ctx, {
-            type: 'polarArea',            
+            type: 'polarArea',
+            data: {
+                labels: ['Tazas', 'Ropa', 'Accesorios'],
+                datasets: [{
+                    label: 'Numero de Ventas',
+
+                    data: [12, 19, 15],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    </script>
+    <script>
+        const bar = document.getElementById('mychart');
+
+        new Chart(bar, {
+            type: 'bar',
             data: {
                 labels: ['Tazas', 'Ropa', 'Accesorios'],
                 datasets: [{
@@ -161,7 +189,9 @@
             }
         });
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
