--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -1,5 +1,7 @@
+@import 'https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap';
+
 :root{
-    --dark: #000000;
+    --dark: #1b1b1b;
     --text: #ffffff;
     --dark-blue: #061e46;
     --bg-dark: #be4a7f;
@@ -16,9 +18,6 @@
 }
 
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
     background: var(--dark);
     background-size: cover;
@@ -58,12 +57,12 @@ a{
 }
 
 .logo-img{
-    height: 6vh !important;
+    height: 5vh !important;
 }
 
 .navegation a {
     position: relative;
-    font-size: 1.1em;
+    font-size: 12px;
     color: var(--text);
     text-decoration: none;
     font-weight: 500;
@@ -91,14 +90,14 @@ a{
 }
 
 .navegation .btnLogin-popup{
-    width: 130px;
-    height: 50px;
+    width: 65px;
+    height: 35px;
     background: transparent;
     border: 2px solid #fff;
     outline: none;
     border-radius: 6px;
     cursor: pointer;
-    font-size: 1.1em;
+    font-size: 12px;
     color: #fff;
     font-weight: 500;
     margin-left: 40px;
@@ -291,10 +290,83 @@ a{
     padding-left: calc(var(--bs-gutter-x) * .0);
 }
 
-.carousel img{
-    height: 80vh;
-}
-
 .text-small{
     font-size: 12px;
+}
+
+.carousel-principal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 35px;
+    margin-top: 4%;
+}
+
+.wrapper-carousel{
+    max-width: 1200px;
+    position: relative;
+}
+
+.wrapper-carousel i{
+    top: 50%;
+    height: 46px;
+    width: 46px;
+    cursor: pointer;
+    position: absolute;
+    font-size: 1.2rem;
+    text-align: center;
+    line-height: 46px;
+    background-color: var(--bg-dark);
+    border-radius: 50%;
+    transform: translateY(-50%);  
+}
+
+.wrapper-carousel i:first-child{
+    left: -23px;
+    z-index: 100;
+    display: none;
+}
+
+.wrapper-carousel i:last-child{
+    right: -23px;
+}
+
+.wrapper-carousel .carousel{
+    white-space: nowrap;
+    font-size: 0px;
+    cursor: pointer;
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+
+.carousel.dragging{
+    cursor: grab;
+    scroll-behavior: auto;
+}
+
+.carousel.dragging img{
+    pointer-events: none;
+}
+
+.carousel img{
+    height: 400px;
+    object-fit: cover;
+    width: calc(100% / 3);
+    margin-left: 14px;
+}
+
+.carousel img:first-child{
+    margin-left: 0px;
+}
+
+@media screen and (max-width:900px) {
+    .carousel img{
+        width: calc(100% / 2);
+    }
+}
+
+@media screen and (max-width:550px) {
+    .carousel img{
+        width: 100% ;
+    }
 }
