navegacion dashboard->usuario

--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -60,7 +60,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/usuario.html">
                             <i><img src="https://img.icons8.com/fluency-systems-filled/48/null/user.png" /></i>
                             <span class="text nav-text">Usuarios</span>
                         </a>
