--- a/views/dashboard/usuario.html
+++ b/views/dashboard/usuario.html
@@ -85,7 +85,9 @@
             </div>
         </div>
     </nav>
-
+    <main>
+        <input type="text" placeholder="Buscar">
+    </main>
     <script>
         const body = document.querySelector('body'),
             sidebar = body.querySelector('nav'),
