carpeta de iconos

--- a/views/dashboard/usuario.html
+++ b/views/dashboard/usuario.html
@@ -86,7 +86,10 @@
         </div>
     </nav>
     <main>
-        <input type="text" placeholder="Buscar">
+        <div class="text-center">
+            <input class="mainLoginInput" type="text" placeholder="Buscar usuario"/>
+            <img src="../../resources/images/iconos/buscar.png" alt="buscar">
+          </div>
     </main>
     <script>
         const body = document.querySelector('body'),
