--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -88,24 +88,30 @@
         </div>
     </nav>
     <section class="home">
-        <div class="row">
-            <div class="col-4 d-flex flex-nowrap">
-                <form method="post" id="search-form">
-                    <div class="input-field  flex-nowrap col-12">
-                        <img src="https://img.icons8.com/ios-filled/32/null/search--v1.png" />
-                        <input id="search" type="text" name="Buscar " required>
-                        <button type="submit" class="btn waves-effect green tooltipped" data-tooltip="Buscar">
-                            <img src="https://img.icons8.com/glyph-neue/40/null/ok--v1.png" />
-                        </button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-4">
-                <div class="input-field center-align col-2">
-                    <button class="border-0 bg-light" onclick="openCreate()"><img src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-5">
+                    <form method="post" id="search-form">
+                        <div class="input-field  flex-nowrap col-12">
+                            <img src="https://img.icons8.com/ios-filled/32/null/search--v1.png" />
+                            <input id="search" type="text" name="Buscar " required>
+                            <button type="submit" class="btn waves-effect green tooltipped" data-tooltip="Buscar">
+                                <img src="https://img.icons8.com/glyph-neue/40/null/ok--v1.png" />
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-3">
+                    
+                        <button class="border-0 " onclick="openCreate()"><img src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>                                                                        
+                    
+                </div>
+                <div class="col-4">
+                    Reportes                   
+                            <button class="border-0"><img src="https://img.icons8.com/fluency-systems-filled/40/null/report-card.png"/></button>
                 </div>
             </div>
-        </div>
+        </div>        
     </section>
     <script>
         const body = document.querySelector('body'),
@@ -128,6 +134,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="../../controllers/dasboard/clientes.js"></script>
 </body>
 
 </html>
