--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -89,8 +89,11 @@
     </nav>
     <section class="home">
         <div class="container">
+            <div class="text">
+                <h2>Clientes</h2>
+            </div>
             <div class="row justify-content-md-center">
-                <div class="col-5">
+                <div class="col-md-5">
                     <form method="post" id="search-form">
                         <div class="input-field  flex-nowrap col-12">
                             <img src="https://img.icons8.com/ios-filled/32/null/search--v1.png" />
@@ -101,18 +104,45 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-3">
-                    
-                        <button class="border-0 " onclick="openCreate()"><img src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>                                                                        
-                    
+                <div class="col-md-3">
+
+                    <button class="border-0 " onclick="openCreate()"><img
+                            src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>
+
                 </div>
-                <div class="col-4">
-                    Reportes  
-                                     
-                            <button class="border-0"><img src="https://img.icons8.com/fluency-systems-filled/40/null/report-card.png"/></button>
+                <div class="col-md-4">
+                    Reportes
+                    <button class="border-0"><img
+                            src="https://img.icons8.com/fluency-systems-filled/40/null/report-card.png" /></button>
                 </div>
+            </div><br>
+            <div class="row"id="tabla">                
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nombre</th>
+                                <th>Apellido</th>
+                                <th>Correo</th>
+                                <th>Usuario</th>
+                                <th>Contraseña</th>
+                                <th>Estado</th>                            
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>01</td>
+                                <td>Ariel Alessando</td>
+                                <td>Sandoval Moreno</td>
+                                <td>arielsandoval@gmail.com</td>
+                                <td>Ariel123</td>
+                                <td>123</td>
+                                <td>Activo</td>
+                            </tr>
+                        </tbody>
+                    </table>                                
             </div>
-        </div>        
+        </div>
     </section>
     <script>
         const body = document.querySelector('body'),
@@ -135,8 +165,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="../../controllers/dasboard/clientes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../../controllers/dasboard/clientes.js"></script>
 </body>
 
 </html>
