--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -126,7 +126,8 @@
                                 <th>Correo</th>
                                 <th>Usuario</th>
                                 <th>Contraseña</th>
-                                <th>Estado</th>                            
+                                <th>Estado</th>
+                                <th></th>                            
                             </tr>
                         </thead>
                         <tbody>
@@ -138,6 +139,7 @@
                                 <td>Ariel123</td>
                                 <td>123</td>
                                 <td>Activo</td>
+                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"/><img src="../../resources/images/iconos/editar.png"></td>
                             </tr>
                         </tbody>
                     </table>                                
