--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -136,15 +136,47 @@ a{
     position: relative;
     width: 400px;
     height: 440px;
-    background: var(--dark-blue);
     border: 2px solid rgb(255, 255, 255, .5);
     border-radius: 20px;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(70px) !important;
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    /* transform: scale(0); */
+    transition: transform .5s ease, height .2s ease;
+}
+
+.wrapper.active-popup {
+    transform: scale(1);
+}
+
+.wrapper.active{
+    height: 570px;
+    margin-top: 70px;
+
+}
+
+.wrapper .form-box.login{
+    transition: transform .18s ease;
+    transform: translateX(1);
+}
+
+.wrapper.active .form-box.login{
+    transition: none;
+    transform: translateX(-400px);
+}
+
+.wrapper .form-box.registrate{
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.registrate{
+    transition: transform .18s ease;
+    transform: translateX(0);
 }
 
 .wrapper .form-box{
@@ -158,9 +190,9 @@ a{
     right: 0;
     width: 45px;
     height: 45px;
-    background: #061e46;
+    background: #be4a7f;
     font-size: 2em;
-    color: #fff;
+    color: #1b1b1b;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -171,7 +203,7 @@ a{
 
 .form-box h2 {
     font-size: 2em;
-    color: #6384aa;
+    color: #be4a7f;
     text-align: center;
 }
 
@@ -189,7 +221,7 @@ a{
     left: 5px;
     transform: translateY(-50%);
     font-size: 1em;
-    color: #6384aa;
+    color: #be4a7f;
     font-weight: 500;
     pointer-events: none;
     transition: .5s;
@@ -208,7 +240,7 @@ a{
     border: none;
     outline: none;
     font-size: 1em;
-    color: #6384aa;
+    color: #be4a7f;
     font-weight: 600;
     padding: 0 35px 0 5px;
 }
@@ -217,13 +249,13 @@ a{
     position: absolute;
     right: 8px;
     font-size: 1.2em;
-    color: #6384aa;
+    color: #be4a7f;
     line-height: 57px;
 }
 
 .remember-forgot{
     font-size: .9em;
-    color: #6384aa;
+    color: #1b1b1b;
     font-weight: 500;
     margin: -15px 0 15px;
     display: flex;
@@ -232,13 +264,13 @@ a{
 }
 
 .remember-forgot label input{
-    accent-color: #455d62;
+    accent-color:  #be4a7f;
     margin-right: 3px;
 
 }
 
 .remember-forgot a {
-    color: #061e46;
+    color: #1b1b1b;
     text-decoration: none;
 
 }
@@ -250,7 +282,7 @@ a{
 .btn{
     width: 100%;
     height: 45px;
-    background: #6384aa;
+    background: #be4a7f;
     border: none;
     outline: none;
     border-radius: 6px;
@@ -262,21 +294,21 @@ a{
 }
 
 .btn:hover{
-    color: #061e46;
+    color:  #be4a7f;
     background: #fff;
 
 }
 
 .login-register{
     font-size: .9em;
-    color: #6384aa;
+    color: #1b1b1b;
     text-align: center;
     font-weight: 500;
     margin: 25px 0 10px;
 }
 
 .login-register p a {
-    color: #061e46;
+    color: #1b1b1b;
     text-decoration: none;
     font-weight: 600;
 }
