--- a/views/dashboard/usuario.html
+++ b/views/dashboard/usuario.html
@@ -9,7 +9,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="sidebar close"> 
+    <nav class="sidebar close">
         <header>
             <div class="image-text">
                 <span class="image">
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/clientes.html">
                             <i><img src="https://img.icons8.com/sf-black-filled/48/null/conference-call.png" /></i>
                             <span class="text nav-text">Clientes</span>
                         </a>
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/usuario.html">
                             <i><img src="https://img.icons8.com/fluency-systems-filled/48/null/user.png" /></i>
                             <span class="text nav-text">Usuarios</span>
                         </a>
@@ -85,12 +85,62 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div class="text-center">
-            <input class="mainLoginInput" type="text" placeholder="Buscar usuario"/>
-            <img src="../../resources/images/iconos/buscar.png" alt="buscar">
-          </div>
-    </main>
+    <section class="home">
+        <div class="container">
+            <div class="text">
+                <h2>Usuarios</h2>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-md-5">
+                    <form method="post" id="search-form">
+                        <div class="input-field  flex-nowrap col-12">
+                            <img src="https://img.icons8.com/ios-filled/32/null/search--v1.png" />
+                            <input id="search" type="text" name="Buscar " placeholder="Buscar" required>
+                            <button type="submit" class="btn waves-effect green tooltipped" data-tooltip="Buscar">
+                                <img src="https://img.icons8.com/glyph-neue/40/null/ok--v1.png" />
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-3">
+                    <button class="border-0 " onclick="openCreate()"><img
+                        src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png"/></button>
+                </div>
+                <div class="col-md-4">
+                    Reportes
+                    <button class="border-0"><img
+                            src="https://img.icons8.com/fluency-systems-filled/40/null/report-card.png" /></button>
+                </div>
+            </div><br>
+            <div class="row"id="tabla">                
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nombre</th>
+                                <th>Apellido</th>
+                                <th>Correo</th>
+                                <th>Usuario</th>
+                                <th>Estado</th>
+                                <th></th>                            
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>01</td>
+                                <td>Cristian Alejandro</td>
+                                <td>Morales Granados</td>
+                                <td>alejandro@gmail.com</td>
+                                <td>Alejo321</td>
+                                <td>Activo</td>
+                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"/><img src="../../resources/images/iconos/editar.png"></td>
+                            </tr>
+                        </tbody>
+                    </table>                                
+            </div>
+        </div>
+    </section>
+
     <script>
         const body = document.querySelector('body'),
             sidebar = body.querySelector('nav'),
@@ -110,7 +160,9 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../../controllers/dasboard/usuarios.js"></script>
 </body>
 </html>
