--- a/views/dashboard/pedidos.html
+++ b/views/dashboard/pedidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+    <title>Pedidos</title>
     <link rel="stylesheet" href="../../resources/css/dashbard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -120,25 +120,18 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                                <th>Apellido</th>
-                                <th>Correo</th>
-                                <th>Usuario</th>
-                                <th>Contraseña</th>
-                                <th>Estado</th>
-                                <th></th>                            
+                                <th>#</th>
+                                <th>Fecha del pedido</th>
+                                <th>Cliente</th>
+                                <th>Estado del pedido</th>                           
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>01</td>
-                                <td>Ariel Alessando</td>
-                                <td>Sandoval Moreno</td>
-                                <td>arielsandoval@gmail.com</td>
-                                <td>Ariel123</td>
-                                <td>123</td>
-                                <td>Activo</td>
+                                <td>12/01/21</td>
+                                <td>Mario Guzmán</td>
+                                <td>Entregado</td>
                                 <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"/><img src="../../resources/images/iconos/editar.png"></td>
                             </tr>
                         </tbody>
