actualización en la navegación del dashboard

--- a/views/dashboard/pedidos.html
+++ b/views/dashboard/pedidos.html
@@ -63,7 +63,7 @@
                     </li>
                     <!--Enlace a la página de categorias-->
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/categorias.html">
                             <i><img
                                     src="https://img.icons8.com/external-others-inmotus-design/40/null/external-Check-List-check-others-inmotus-design.png" /></i>
                             <span class="text nav-text">Categorias</span>
