--- a/views/dashboard/categorias.html
+++ b/views/dashboard/categorias.html
@@ -95,7 +95,7 @@
     <section class="home">
         <div class="container">
             <div class="text">
-                <h2>Usuarios</h2>
+                <h2>Categorias</h2>
             </div>
             <div class="row justify-content-md-center">
                 <!--Buscador-->
