--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -67,7 +67,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/categorias.html">
                             <i><img
                                     src="https://img.icons8.com/external-others-inmotus-design/40/null/external-Check-List-check-others-inmotus-design.png" /></i>
                             <span class="text nav-text">Categorias</span>
