método eliminar categoria

--- a/views/dashboard/categorias.html
+++ b/views/dashboard/categorias.html
@@ -143,7 +143,7 @@
                                 <td>Boxer personalizado</td>
                                 <td>Activo</td>
                                 <!--Botones para actualizar y desactivar un usuario-->
-                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="openCreate3()"/><img src="../../resources/images/iconos/editar.png" onclick="editarusuario()"></td>
+                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="eliminarcategoria()"/><img src="../../resources/images/iconos/editar.png" onclick="editarcategoria()"></td>
                             </tr>
                         </tbody>
                     </table>                                
